Refactored popupform and created basic structure for a test