@@ -1,22 +1,15 @@
 package oogasalad.view.builder;
 
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
-import javafx.scene.Node;
 import javafx.scene.Scene;
-import javafx.scene.control.ColorPicker;
-import javafx.scene.control.TextField;
 import javafx.scene.image.Image;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
 import javafx.stage.Stage;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
-import java.io.Console;
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
 import java.lang.reflect.Parameter;
 import java.util.*;
 import java.util.List;
@@ -24,30 +17,25 @@ import java.util.List;
 public class PopupForm<T> implements BuilderUtility {
     private static final double POPUP_WIDTH = 300;
     private static final double POPUP_HEIGHT = 300;
-    private Class obj;
+    private static final Logger LOGGER = LogManager.getLogger(PopupForm.class);
+    private Class<T> objectClass;
     private ResourceBundle resourceBundle;
     private T generatedObject;
     private Stage stage;
-    public PopupForm(Class obj, ResourceBundle resourceBundle) {
-        this.obj = obj;
+    public PopupForm(Class objectClass, ResourceBundle resourceBundle) {
+        this.objectClass = objectClass;
         this.resourceBundle = resourceBundle;
-    }
-//    public boolean validateInput(){
-//        return true;
-//    }
-    public Object getObject() {
-        return generatedObject;
+        this.generatedObject = null;
+
+        displayForm();
     }
     private List<Parameter> getObjectFields() {
-        Class<?> clazz = obj;
-        Constructor<?>[] constructors = obj.getDeclaredConstructors();
-        //Class<?>[] parameterTypes = constructors[0].getParameterTypes();
-        return List.of(constructors[0].getParameters());
+        return List.of(objectClass.getDeclaredConstructors()[0].getParameters());
     }
 
     private void saveInputToObject(Map<String, ParameterStrategy> fieldMap) {
         try {
-            Constructor<?> constructor = obj.getDeclaredConstructors()[0];
+            Constructor<?> constructor = objectClass.getDeclaredConstructors()[0];
             List<Parameter> parameters = List.of(constructor.getParameters());
             Object[] args = parameters.stream()
                     .map(param -> fieldMap.get(param.getName()).getValue())
@@ -55,12 +43,11 @@ public class PopupForm<T> implements BuilderUtility {
 
             generatedObject = (T) constructor.newInstance(args);
         } catch (Exception e) {
-            e.printStackTrace();
-            System.out.println("Unable to save form to object");
+            LOGGER.error("Failed to save form to object.");
         }
         stage.close();
     }
-    public void displayForm() {
+    public Object displayForm() {
         Map<Class, Class> strategies = new HashMap<>();
         strategies.put(String.class, TextParameterStrategy.class);
         strategies.put(int.class, IntegerParameterStrategy.class);
@@ -69,29 +56,53 @@ public class PopupForm<T> implements BuilderUtility {
         strategies.put(File.class, FileParameterStrategy.class);
         strategies.put(Image.class, ImageParameterStrategy.class);
 
-        List<Parameter> fields = getObjectFields();
+        Map<String, ParameterStrategy> fieldMap = createFieldMap(strategies);
+
+        VBox form = createForm(fieldMap);
+        form.getChildren().add(makeButton("SubmitForm", resourceBundle, e->saveInputToObject(fieldMap)));
+
+        Scene scene = createScene(form);
+        stage = createStage(scene);
+
+        stage.showAndWait();
+
+        return generatedObject;
+    }
+
+    private Map<String, ParameterStrategy> createFieldMap(Map<Class, Class> strategies) {
         Map<String, ParameterStrategy> fieldMap = new HashMap<>();
+        List<Parameter> fields = getObjectFields();
 
         for (Parameter param : fields) {
-            try {
-                fieldMap.put(param.getName(), (ParameterStrategy) strategies.get(param.getType()).newInstance());
-            } catch (InstantiationException e) {
-                throw new RuntimeException(e);
-            } catch (IllegalAccessException e) {
-                throw new RuntimeException(e);
+            Class<? extends ParameterStrategy> strategyClass = strategies.get(param.getType());
+            if (strategyClass == null) {
+                LOGGER.error("No parameter strategy found for type {}", param.getType());
+            } else {
+                try {
+                    fieldMap.put(param.getName(), strategyClass.getDeclaredConstructor().newInstance());
+                } catch (Exception e) {
+                    LOGGER.error("Failed to create parameter strategy for type {}", param.getType());
+                }
             }
-
         }
+        return fieldMap;
+    }
+    private VBox createForm(Map<String, ParameterStrategy> fieldMap) {
         VBox form = new VBox();
+
         for (String name : fieldMap.keySet()) {
             form.getChildren().add(fieldMap.get(name).renderInput(name, resourceBundle));
         }
-        form.getChildren().add(makeButton("SubmitForm", resourceBundle, e->saveInputToObject(fieldMap)));
-
+        return form;
+    }
+    private Scene createScene(VBox form) {
         Scene scene = new Scene(form, POPUP_WIDTH, POPUP_HEIGHT);
-        stage = new Stage();
+        return scene;
+    }
+    private Stage createStage(Scene scene) {
+        Stage stage = new Stage();
         stage.setScene(scene);
         stage.setTitle(resourceBundle.getString("PopupFormTitle"));
-        stage.show();
+        return stage;
     }
 }
